[package]
edition = "2021"
name = "purebundle"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1", features = ["derive"] }
swc_core = { version = "0.75.47", features = ["ecma_plugin_transform", "__parser"] }
swc_ecma_utils = { version = "0" }

[dev-dependencies]
testing = { version = "*" }
