[package]
name = "purebundle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
# locked cause https://plugins.swc.rs/versions/range/271
swc_core = { version = "22.5.2", features = ["ecma_plugin_transform", "__parser"] }

[dev-dependencies]
testing = { version = "*" }
