[package]
name = "swc-plugin-access-control-autocomplete"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1.0.x"
lazy_static = "1.4.x"
regex = "1"
itertools = "0.10.x"
swc_ecma_parser = "0.117.x"
swc_core = { version = "0.8.x", features = [
    "plugin_transform",
    "utils",
    "visit",
    "ast",
    "common"
] }
swc_plugin = "0.89.x"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
