[package]
name = "vuecomponentcompleter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
swc_core = { version = "16.4.0", features = ["ecma_plugin_transform", "__parser"] }
convert_case = { version = "0.7.1" }

[dev-dependencies]
testing = { version = "*" }
