[package]
name = "vuecomponentcompleter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
# locked cause https://plugins.swc.rs/versions/range/271
swc_core = { version = "22.3.1", features = ["ecma_plugin_transform", "__parser"] }
convert_case = { version = "0.8.0" }

[dev-dependencies]
testing = { version = "*" }
