[package]
name = "vuecomponentcompleter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
# locked cause https://github.com/swc-project/swc/releases/tag/v1.13.5
swc_core = { version = "37.0.0", features = ["ecma_plugin_transform", "__parser"] }
convert_case = { version = "0.8.0" }

[dev-dependencies]
testing = { version = "*" }
