[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
base64ct = { version = "1.6.0", features = ["alloc"] }
sha1 = "0.10.6"
serde_json = "1"
aes = { version = "0.8.4" }
cfb-mode = { version = "0.8.2" }
serde = { version = "1", features = ["derive"] }
rsa = "0.9.7"
rand = { version = "0.8.5" }
getrandom = { version = "*", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = "s"
